# nakprok

./: .gitignore  .hgtags  .markdownlint.json  CHANGELOG.md  README.md  pyproject.toml
examples/: invalid.py  valid.py  walrus.py
nakprok/: __init__.py  checker.py  cli.py  runner.py
scripts/: code-format.sh  runtest.sh
tests/: test_checker.py  test_checker_extended.py  test_cli.py  test_runner.py
